bk_ida/gccida/g2/life_analysis
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:884:4: error: expected ';' after expression
rtx insns; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:884:5: error: use of undeclared identifier 'insns'
rtx insns; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:885:4: error: expected ';' after expression
rtx rtwint; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:885:5: error: use of undeclared identifier 'rtwint'; did you mean 'rewind'?
rtx rtwint; // rbp 
    ^~~~~~
    rewind
/usr/include/stdio.h:694:13: note: 'rewind' declared here
extern void rewind (FILE *__stream);
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:938:22: error: expected expression
note_stores( *( rtx *)&rtx[2], notice_stack_pointer_modification_1, 0LL); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1008:22: error: use of undeclared identifier 'machine_mode'
v19 = gen_rtx_REG( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 2); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1016:22: error: use of undeclared identifier 'mark_reg_0'; did you mean 'mark_reg'?
diddle_return_value( mark_reg_0, global_live_at_start); 
                     ^~~~~~~~~~
                     mark_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:292:13: note: 'mark_reg' declared here
static void mark_reg                    PARAMS ((rtx, void *));
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1021:12: error: expected expression
*( _OWORD *)regs_ever_live = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1021:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)regs_ever_live = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1022:12: error: expected expression
*( _OWORD *)&regs_ever_live[16] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1022:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&regs_ever_live[16] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1023:12: error: expected expression
*( _OWORD *)&regs_ever_live[32] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1023:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&regs_ever_live[32] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1030:1: error: use of undeclared identifier 'insns'
insns = get_insns( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1031:1: error: use of undeclared identifier 'rtwint'
rtwint = insns; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1031:10: error: use of undeclared identifier 'insns'
rtwint = insns; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1032:6: error: use of undeclared identifier 'insns'
if ( insns ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1034:18: error: use of undeclared identifier 'insns'
v16 = *( _WORD *)insns; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/flow.c:1037:24: error: use of undeclared identifier 'rtwint'
v17.rtwint = ( __int64)rtwint[1].fld[0]; 
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/life_analysis/src/obj/flow.o] Error 1
